--- a/index.html
+++ b/index.html
@@ -6,53 +6,54 @@
 </head>
 <body>
 
-  <h1>Dasmoto's Arts & Crafts</h1>
-  <h2>Art Work Tools</h2>
-  <p>Items that you may need to finish your art work:</p>
   <div class="items">
-  <ol>
-    <li> <a href="#bruches">Bruches</a> </li>
-    <li> <a href="#frames">Frames</a> </li>
-    <li> <a href="#paint">Paint</a> </li>
-    <li> <a href="#me">Me</a> </li>
-  </ol>
+      <h1>Broadway Design</h1>
+  <p>Items that you may need to finish your art work:</p>
+  <ul>
+    <li> <a href="#home">Home</a> </li>
+    <li> <a href="#process">Process</a> </li>
+    <li> <a href="#work">Work</a> </li>
+    <li> <a href="#team">Team</a> </li>
+    <li> <a href="#contact">Contact</a> </li>
+  </ul>
 </div>
 
-<div id="bruches">
-  <h2 class="bruches">Bruches</h2>
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg" />
-  <h3>Hacksaw Brushes</h3>
-  <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold
-  <br />paint in large amounts. Available in different sizes.
-  <span class="price">Starting at $3.00 / brush.</span></p>
+<div>
+  <h2>Our Process</h2>
+  <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Broadway Design\Resources\Images\identify.svg" />
+  <p>We focus on the most important details.</p>
+  <h3>Identify</h3>
 </div>
 
-<div id="frames">
-  <h2 class="frames">Frames</h2>
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/frames.jpeg" />
+<div>
+  <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Broadway Design\Resources\Images\understand.svg" />
+  <h2>Understand</h2>
+  <p>We study our projects inside and out.</p>
+  <h3>Identify</h3>
+</div>
+
+<div>
+  <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Broadway Design\Resources\Images\execute.svg" />
+  <h2>Execute</h2>
+  <p>We put everything we have into our work.</p>
+  <h3>Identify</h3>
+</div>
+
+<div id="work">
+  <h2 class="work">Work</h2>
   <h3>Art Frames (assorted)</h3>
-  <p>Assorted frames made of different material, including MDF, birchwood, and PDE.
-  <br />Select frames can be sanded and painted according to your needs.
-  <span class="price">Starting at $2.00 / frame.</span></p>
+  <p><span class="price">Starting at $2.00 / frame.</span></p>
 </div>
 
 <div id="paint">
   <h2 class="paint">Paint</h2>
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/finnish.jpeg" />
   <h3>Clean Finnish Paint</h3>
-  <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.).
-  <br />Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.
-  <br /><span class="price">Starting at $5.00 / tube.</span></p>
+  <p><span class="price">Starting at $5.00 / tube.</span></p>
 <div>
 
 <div id="me">
   <h3>About Me</h3>
-  <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Dasmoto's Arts & Crafts\Resources\me.JPG" />
-  <p>Last, but certainly not least, is Moat Lagoon.
-  <br />This is one of the most difficult beach locations to access.
-  <br />The lagoon is located inside of a prehistoric cenote, or underground aquifer.
-  <br />Accessing it involves crossing the moat surrounding the lagoon (hence the name) with locals
-  <br />by kayak. Once there, marvel at the phenomenal (and endangered) quetzal bird and its golden feathers.</p>
+  <p>Last, but certainly not least, is Moat Lagoon.</p>
 </div>
 
   <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
