--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
-  <title>Dasmoto's Arts & Crafts</title>
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  <title>Broadway Design</title>
 </head>
 <body>
 
@@ -46,10 +46,13 @@
 </div>
 
 <div id="paint">
-  <h2 class="paint">Paint</h2>
-  <h3>Clean Finnish Paint</h3>
-  <p><span class="price">Starting at $5.00 / tube.</span></p>
+  <h2 class="items">Designed in New York</h2>
 <div>
+
+  <div>
+    <h2>Portfolio</h2>
+    <p>Coming Soon.</p>
+  </div>
 
 <div id="me">
   <h3>About Me</h3>
