--- a/index.html
+++ b/index.html
@@ -8,45 +8,37 @@
 
   <div class="items">
       <h1>Broadway Design</h1>
-  <p>Items that you may need to finish your art work:</p>
   <ul>
     <li> <a href="#home">Home</a> </li>
     <li> <a href="#process">Process</a> </li>
     <li> <a href="#work">Work</a> </li>
     <li> <a href="#team">Team</a> </li>
     <li> <a href="#contact">Contact</a> </li>
+    <br />
   </ul>
 </div>
 
 <div>
   <h2>Our Process</h2>
   <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Broadway Design\Resources\Images\identify.svg" />
-  <p>We focus on the most important details.</p>
   <h3>Identify</h3>
+  <p>We focus on the most important details.</p>
 </div>
 
 <div>
   <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Broadway Design\Resources\Images\understand.svg" />
   <h2>Understand</h2>
   <p>We study our projects inside and out.</p>
-  <h3>Identify</h3>
 </div>
 
 <div>
   <img src="C:\Users\FreddyPC\Documents\Web_Design_Class\Broadway Design\Resources\Images\execute.svg" />
   <h2>Execute</h2>
   <p>We put everything we have into our work.</p>
-  <h3>Identify</h3>
-</div>
-
-<div id="work">
-  <h2 class="work">Work</h2>
-  <h3>Art Frames (assorted)</h3>
-  <p><span class="price">Starting at $2.00 / frame.</span></p>
 </div>
 
 <div id="paint">
-  <h2 class="items">Designed in New York</h2>
+  <h4 class="items">Designed in New York</h4>
 <div>
 
   <div>
@@ -54,10 +46,33 @@
     <p>Coming Soon.</p>
   </div>
 
+  <div>
+    <h2>Team</h2>
+    <p>We are hiring!.</p>
+  </div>
+
+  <div>
+    <h2>Contact</h2>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
+</div>
+
 <div id="me">
   <h3>About Me</h3>
   <p>Last, but certainly not least, is Moat Lagoon.</p>
 </div>
+
+<div class="footer">
+      <p>
+        © Broadway 2017
+        <a class="btn-nav" href="#">Home</a>
+        <a class="btn-nav" href="#about">About</a>
+        <a class="btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#team">Team</a>
+        <a class="btn-nav" href="#contact">Contact</a>
+      </p>
+    </div>
 
   <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
 
